--- a/template.html
+++ b/template.html
@@ -4,7 +4,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <link href="css/bootstrap.css" rel="stylesheet" />
-  <title>$title$</title>
+  <title>Also spricht Kirikaza: $title$</title>
 </head>
 
 <body>
