#7 #8 Define sections and compose the about page
Insert inverted-coloured navigation bar sticked to top.
Introduce four sections: posts, linux book, koks, about.
Compose the about page, add a line into the posts page.

--- a/template.html
+++ b/template.html
@@ -8,7 +8,18 @@
 </head>
 
 <body>
-  <div class="hero-unit">
+  <div class="navbar navbar-static-top navbar-inverse">
+    <div class="navbar-inner">
+      <a class="brand" href="/index.html">Also spricht Kirikaza</a>
+      <ul class="nav">
+	<li><a href="/posts.html">Заметки</a></li>
+	<li><a href="/linux.html">Linux book</a></li>
+	<li><a href="/koks.html">KOKS</a></li>
+	<li><a href="/index.html">От автора</a></li>
+      </ul>
+    </div>
+  </div>
+  <div class="container-fluid">
     <h1>$title$</h1>
     $body$
   </div>
