--- a/template.html
+++ b/template.html
@@ -29,7 +29,7 @@
       <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/3.0/"><img alt="Creative Commons License" style="margin-right:10px;" src="http://i.creativecommons.org/l/by-nc-nd/3.0/88x31.png" /></a>
     </p>
     <p>
-      &laquo;<span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Also spricht Kirikaza</span>&raquo; by <a xmlns:cc="http://creativecommons.org/ns#" href="http://kirikaza.ru" property="cc:attributionName" rel="cc:attributionURL">Kirill Kazakov</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/3.0/">Creative Commons Attribution-NonCommercial-NoDerivs 3.0 Unported License</a>.
+      Автор сайта &laquo;<span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Also spricht Kirikaza</span>&raquo;&nbsp;&ndash; <a xmlns:cc="http://creativecommons.org/ns#" href="http://kirikaza.ru" property="cc:attributionName" rel="cc:attributionURL">Кирилл Казаков</a>. Материалы сайта доступны на условиях <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/3.0/deed.ru">Creative Commons Attribution-NonCommercial-NoDerivs 3.0 Unported License</a>.
     </p>
   </div>
 </body>
