--- a/template.html
+++ b/template.html
@@ -5,6 +5,15 @@
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <link href="css/bootstrap.css" rel="stylesheet" />
   <title>Also spricht Kirikaza: $title$</title>
+  <style>
+    div#disqus_thread {
+      background-color: #F5F5F5;
+      border-top: 1px solid #E5E5E5;
+      border-bottom: 1px solid #E5E5E5;
+      padding: 20px;
+      margin: 20px 0 20px 0;
+    }
+  </style>
   <script type="text/javascript">
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-34888740-1']);
@@ -33,21 +42,20 @@
   <div class="container-fluid">
     <h1>$title$</h1>
     $body$
-    <div id="disqus_thread"></div>
+  </div>
+  <div id="disqus_thread" class="container-fluid">
     <script type="text/javascript">
       (function() {
-        var dsq = document.createElement('script');
+	var dsq = document.createElement('script');
 	dsq.type = 'text/javascript';
 	dsq.async = true;
-        dsq.src = 'http://kirikaza.disqus.com/embed.js';
-        (document.getElementsByTagName('head')[0]).appendChild(dsq);
+	dsq.src = 'http://kirikaza.disqus.com/embed.js';
+	(document.getElementsByTagName('head')[0]).appendChild(dsq);
       })();
     </script>
-    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+    <noscript><p>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></p></noscript>
   </div>
   <div class="container-fluid muted">
-    <hr />
     <p class="pull-left">
       <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/3.0/"><img alt="Creative Commons License" style="margin-right:10px;" src="http://i.creativecommons.org/l/by-nc-nd/3.0/88x31.png" /></a>
     </p>
