--- a/template.html
+++ b/template.html
@@ -63,6 +63,23 @@
       Автор сайта &laquo;<span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Also spricht Kirikaza</span>&raquo;&nbsp;&ndash; <a xmlns:cc="http://creativecommons.org/ns#" href="http://kirikaza.ru" property="cc:attributionName" rel="cc:attributionURL">Кирилл Казаков</a>. Материалы сайта доступны на условиях <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/3.0/deed.ru">Creative Commons Attribution-NonCommercial-NoDerivs 3.0 Unported License</a>.
     </p>
   </div>
+  <script type="text/javascript">
+    var GoSquared = {};
+    GoSquared.acct = "GSN-366667-M";
+    (function(w){
+      function gs(){
+        w._gstc_lt = +new Date;
+        var d = document, g = d.createElement("script");
+        g.type = "text/javascript";
+        g.src = "//d1l6p2sc9645hc.cloudfront.net/tracker.js";
+        var s = d.getElementsByTagName("script")[0];
+        s.parentNode.insertBefore(g, s);
+      }
+      w.addEventListener ?
+        w.addEventListener("load", gs, false) :
+        w.attachEvent("onload", gs);
+    })(window);
+  </script>
 </body>
 
 </html>
